[gd_scene load_steps=2 format=3 uid="uid://bk0c8s7avefr7"]

[ext_resource type="Script" uid="uid://sukvc5b8oead" path="res://UI/UI scripts/you_died_screen.gd" id="1_farrx"]

[node name="YouDiedScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_farrx")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(640, 360)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.20871, 0.20871, 0.20871, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 270.0
offset_top = 50.0
offset_right = 344.0
offset_bottom = 97.0
scale = Vector2(2, 2)

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "You Died!"

[node name="PlayAgain" type="Button" parent="ColorRect/VBoxContainer"]
process_mode = 3
layout_mode = 2
focus_neighbor_bottom = NodePath("../SeeYourScore")
text = "Play Again"

[node name="SeeYourScore" type="Button" parent="ColorRect/VBoxContainer"]
process_mode = 3
layout_mode = 2
focus_neighbor_top = NodePath("../PlayAgain")
focus_neighbor_bottom = NodePath("../QuitGame")
text = "See Your Score"

[node name="QuitGame" type="Button" parent="ColorRect/VBoxContainer"]
process_mode = 3
layout_mode = 2
focus_neighbor_top = NodePath("../SeeYourScore")
text = "Quit Game"

[connection signal="pressed" from="ColorRect/VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/SeeYourScore" to="." method="_on_see_your_score_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
